Create and style the Etch_a_Sketch main components

--- a/index.html
+++ b/index.html
@@ -5,13 +5,35 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css2?family=Tilt+Prism&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script src="app.js" defer></script>
-    <title>Etch A Sketch</title>
+    <title>Etch-a-Sketch</title>
 </head>
 
 <body>
+    <div id="content">
+        <div id="sketchContainer">
+            <div class="sketchPieces settings">
+                <div>
+                    <label for="color">pick a color:</label>
+                    <input type="color" name="color" id="color">
+                </div>
+                <div>
+                    <label for="grid">Choose a board size:</label>
+                    <input type="number" name="grid" id="grid" min="0" max="100" value="16">
+                </div>
+            </div>
+            <div class="sketchPieces drawingBoard">
 
+            </div>
+            <div class="sketchPieces controls">
+                <div class="knobs"></div>
+                <h1> Etch-a-Sketch</h1>
+                <div class="knobs"></div>
+            </div>
+        </div>
+    </div>
 </body>
 
 </html>
