Reorganize settings, making it less cluttered

--- a/index.html
+++ b/index.html
@@ -14,13 +14,9 @@
 <body>
     <div id="content">
         <div id="sketchContainer">
-            <div class="sketchPieces settings">
+            <div class="sketchPieces gridSettings">
                 <div>
-                    <label for="color">pick a color:</label>
-                    <input type="color" name="color" id="color">
-                </div>
-                <div>
-                    <label for="grid">Choose a board size: <span>36 x 36</span></label>
+                    <span>Choose a board size: <span>36 x 36</span></span>
                     <div>
                         <label for="small">Small:</label>
                         <input type="radio" name="size" id="small" value="small">
@@ -31,8 +27,12 @@
                     </div>
                 </div>
             </div>
-            <div class="sketchPieces drawingBoard">
+            <div class="sketchPieces colorSettings">
+                <div class="penSettings"></div>
+                <div class="drawingBoard">
 
+                </div>
+                <div class="penSettings"></div>
             </div>
             <div class="sketchPieces controls">
                 <div class="knobs"></div>
