--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div id="sketchContainer">
             <div class="sketchPieces gridSettings">
                 <div>
-                    <span>Choose a board size:</span>
+                    <span>Choose a board size: <span class="gridSize">32</span> x <span class="gridSize">16</span> </span>
                     <div>
                         <label for="small">Small:</label>
                         <input type="radio" name="size" id="small" value="small">
