Add logic to allow user to select grid size

--- a/index.html
+++ b/index.html
@@ -16,12 +16,12 @@
         <div id="sketchContainer">
             <div class="sketchPieces gridSettings">
                 <div>
-                    <span>Choose a board size: <span class="gridSize">32</span> x <span class="gridSize">16</span> </span>
+                    <span>Choose a board size: <span class="gridSize">32</span> x <span class="gridSize">16</span></span>
                     <div>
                         <label for="small">Small:</label>
                         <input type="radio" name="size" id="small" value="small">
                         <label for="medium">Medium:</label>
-                        <input type="radio" name="size" id="medium" value="medium" checked>
+                        <input type="radio" name="size" id="medium" value="medium">
                         <label for="large">Large:</label>
                         <input type="radio" name="size" id="large" value="large">
                     </div>
