Add logic to allow users to select differnt pen colors

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <div class="sketchPieces colorSettings">
                 <div class="penSettings leftSide">
                     <input type="color">
-                    <button>Color</button>
+                    <button class="selected">Color</button>
                     <button>Rainbow</button>
                 </div>
                 <div class="drawingBoard"></div>
