Add event to color input to auto select color option

--- a/index.html
+++ b/index.html
@@ -32,11 +32,12 @@
                     <input type="color">
                     <button class="selected">Color</button>
                     <button>Rainbow</button>
+                    <button>Eraser</button>
                 </div>
                 <div class="drawingBoard"></div>
                 <div class="penSettings rightSide">
                     <button class="clear">Clear</button>
-                    <button>Eraser</button>
+                    <button class="grid">Grid</button>
                 </div>
             </div>
             <div class="sketchPieces controls">
