Add the functionality for users to disable the grid

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="sketchPieces colorSettings">
                 <div class="penSettings leftSide">
-                    <input type="color">
+                    <input type="color" value="#000000">
                     <button class="selected">Color</button>
                     <button>Rainbow</button>
                     <button>Eraser</button>
